--- a/config.yaml
+++ b/config.yaml
@@ -192,5 +192,9 @@ rules:
   - DOMAIN-SUFFIX,zhimg.com,DIRECT
   - DOMAIN-SUFFIX,zimuzu.tv,DIRECT
   - DOMAIN-SUFFIX,zoho.com,DIRECT
+  - DOMAIN-SUFFIX,zoho.com,DIRECT
+  - DOMAIN-SUFFIX,my.justhost.ru,DIRECT 
+  - DOMAIN-SUFFIX,paypal.com,DIRECT 
+  - DOMAIN-SUFFIX,my.racknerd.com,DIRECT 
   - GEOIP,CN,DIRECT
   - MATCH,Proxy
