--- a/config.yaml
+++ b/config.yaml
@@ -1,200 +1,178 @@
-port: 7890
-socks-port: 7891
-allow-lan: true
-mode: Rule
-log-level: error
+# Clash 配置（适用于 Clash Meta/基础版）
+# 使用 Shadowsocks IP 直连 VPS 多端口，自动测速选择最低延迟
 
+mixed-port: 7890
+socks-port: 7891
+redir-port: 7892
+allow-lan: true
+mode: rule
+log-level: info
 dns:
   enable: true
-  listen: 0.0.0.0:53
   enhanced-mode: fake-ip
   nameserver:
-    - 114.114.114.114
     - 223.5.5.5
+    - 119.29.29.29
   fallback:
     - https://1.1.1.1/dns-query
-    - https://8.8.8.8/dns-query
+    - https://dns.google/dns-query
 
 proxies:
-  - name: "Singapore-SS2022"
+  - name: "SS-50314"
     type: ss
-    server: 192.124.176.237
-    port: 443
+    server: 103.115.18.11
+    port: 50314
     cipher: chacha20-ietf-poly1305
-    password: b05P11PXT+BLOV+1dcY9XQ==
-    udp: true
+    password: ILoveLiuShuHan
+
+  - name: "SS-50315"
+    type: ss
+    server: 103.115.18.11
+    port: 50315
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50316"
+    type: ss
+    server: 103.115.18.11
+    port: 50316
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50317"
+    type: ss
+    server: 103.115.18.11
+    port: 50317
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50318"
+    type: ss
+    server: 103.115.18.11
+    port: 50318
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50319"
+    type: ss
+    server: 103.115.18.11
+    port: 50319
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50320"
+    type: ss
+    server: 103.115.18.11
+    port: 50320
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50321"
+    type: ss
+    server: 103.115.18.11
+    port: 50321
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50322"
+    type: ss
+    server: 103.115.18.11
+    port: 50322
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
+
+  - name: "SS-50323"
+    type: ss
+    server: 103.115.18.11
+    port: 50323
+    cipher: chacha20-ietf-poly1305
+    password: ILoveLiuShuHan
 
 proxy-groups:
-  - name: "Proxy"
+  - name: "AutoSelect"
     type: url-test
     proxies:
-      - Singapore-SS2022
-    url: "http://www.gstatic.com/generate_204"
+      - SS-50314
+      - SS-50315
+      - SS-50316
+      - SS-50317
+      - SS-50318
+      - SS-50319
+      - SS-50320
+      - SS-50321
+      - SS-50322
+      - SS-50323
+    url: "https://speed.cloudflare.com/__down?bytes=10000000"
+    interval: 300   # ← 这里单位是“秒”，300秒 = 5分钟
+
+  - name: "Smart-load"
+    type: load-balance
+    proxies:
+      - SS-50314
+      - SS-50315
+      - SS-50316
+    strategy: round-robin
+    url: "https://www.youtube.com"
     interval: 300
 
+  - name: "ChatGPT"
+    type: url-test
+    proxies:
+      - SS-50314
+      - SS-50315
+      - SS-50316
+      - SS-50317
+      - SS-50318
+      - SS-50319
+      - SS-50320
+      - SS-50321
+      - SS-50322
+      - SS-50323
+    url: "https://chatgpt.com"
+    interval: 300   # ← 这里单位是“秒”，300秒 = 5分钟
+
+  - name: "SelectManually"
+    type: select
+    proxies:
+      - AutoSelect
+      - Smart-load
+      - ChatGPT
+      - SS-50314
+      - SS-50315
+      - SS-50316
+      - SS-50317
+      - SS-50318
+      - SS-50319
+      - SS-50320
+      - SS-50321
+      - SS-50322
+      - SS-50323
+      - DIRECT
+
 rules:
-  - DOMAIN-SUFFIX,openai.com,Proxy
-  - DOMAIN-SUFFIX,chat.openai.com,Proxy
-  - DOMAIN-SUFFIX,telegram.org,Proxy
-  - DOMAIN-SUFFIX,t.me,Proxy
-  - DOMAIN-SUFFIX,youtube.com,Proxy
-  - DOMAIN-SUFFIX,googlevideo.com,Proxy
-  - DOMAIN-SUFFIX,github.com,Proxy
-  - DOMAIN-SUFFIX,twitter.com,Proxy
-  - DOMAIN-SUFFIX,facebook.com,Proxy
-  - DOMAIN-SUFFIX,googleapis.com,Proxy
-  - DOMAIN-SUFFIX,gstatic.com,Proxy
-  - DOMAIN-SUFFIX,steampowered.com,Proxy
-  - DOMAIN-SUFFIX,steamcommunity.com,Proxy
-  - DOMAIN-SUFFIX,steam-chat.com,Proxy
-  - DOMAIN-SUFFIX,steamgames.com,Proxy
-  - DOMAIN-SUFFIX,steamusercontent.com,Proxy
-  - DOMAIN-KEYWORD,steam,Proxy
-  - PROCESS-NAME,Steam.exe,Proxy
-  - DOMAIN-SUFFIX,mzstatic.com,DIRECT
-  - DOMAIN-SUFFIX,itunes.apple.com,DIRECT
-  - DOMAIN-SUFFIX,icloud.com,DIRECT
-  - DOMAIN-SUFFIX,icloud-content.com,DIRECT
-  - DOMAIN-SUFFIX,me.com,DIRECT
-  - DOMAIN-SUFFIX,aaplimg.com,DIRECT
-  - DOMAIN-SUFFIX,cdn20.com,DIRECT
-  - DOMAIN-SUFFIX,cdn-apple.com,DIRECT
-  - DOMAIN-SUFFIX,akadns.net,DIRECT
-  - DOMAIN-SUFFIX,akamaiedge.net,DIRECT
-  - DOMAIN-SUFFIX,edgekey.net,DIRECT
-  - DOMAIN-SUFFIX,mwcloudcdn.com,DIRECT
-  - DOMAIN-SUFFIX,mwcname.com,DIRECT
-  - DOMAIN-SUFFIX,apple.com,DIRECT
-  - DOMAIN-SUFFIX,apple-cloudkit.com,DIRECT
-  - DOMAIN-SUFFIX,apple-mapkit.com,DIRECT
-  - DOMAIN-SUFFIX,126.com,DIRECT
-  - DOMAIN-SUFFIX,126.net,DIRECT
-  - DOMAIN-SUFFIX,127.net,DIRECT
-  - DOMAIN-SUFFIX,163.com,DIRECT
-  - DOMAIN-SUFFIX,360buyimg.com,DIRECT
-  - DOMAIN-SUFFIX,36kr.com,DIRECT
-  - DOMAIN-SUFFIX,acfun.tv,DIRECT
-  - DOMAIN-SUFFIX,air-matters.com,DIRECT
-  - DOMAIN-SUFFIX,aixifan.com,DIRECT
-  - DOMAIN-KEYWORD,alicdn,DIRECT
-  - DOMAIN-KEYWORD,alipay,DIRECT
-  - DOMAIN-KEYWORD,taobao,DIRECT
-  - DOMAIN-SUFFIX,amap.com,DIRECT
-  - DOMAIN-SUFFIX,autonavi.com,DIRECT
-  - DOMAIN-KEYWORD,baidu,DIRECT
-  - DOMAIN-SUFFIX,bdimg.com,DIRECT
-  - DOMAIN-SUFFIX,bdstatic.com,DIRECT
+  # 国内常用网站走直连
   - DOMAIN-SUFFIX,bilibili.com,DIRECT
-  - DOMAIN-SUFFIX,bilivideo.com,DIRECT
-  - DOMAIN-SUFFIX,caiyunapp.com,DIRECT
-  - DOMAIN-SUFFIX,clouddn.com,DIRECT
-  - DOMAIN-SUFFIX,cnbeta.com,DIRECT
-  - DOMAIN-SUFFIX,cnbetacdn.com,DIRECT
-  - DOMAIN-SUFFIX,cootekservice.com,DIRECT
-  - DOMAIN-SUFFIX,csdn.net,DIRECT
-  - DOMAIN-SUFFIX,ctrip.com,DIRECT
-  - DOMAIN-SUFFIX,dgtle.com,DIRECT
-  - DOMAIN-SUFFIX,dianping.com,DIRECT
-  - DOMAIN-SUFFIX,douban.com,DIRECT
-  - DOMAIN-SUFFIX,doubanio.com,DIRECT
-  - DOMAIN-SUFFIX,duokan.com,DIRECT
-  - DOMAIN-SUFFIX,easou.com,DIRECT
-  - DOMAIN-SUFFIX,ele.me,DIRECT
-  - DOMAIN-SUFFIX,feng.com,DIRECT
-  - DOMAIN-SUFFIX,fir.im,DIRECT
-  - DOMAIN-SUFFIX,frdic.com,DIRECT
-  - DOMAIN-SUFFIX,g-cores.com,DIRECT
-  - DOMAIN-SUFFIX,godic.net,DIRECT
-  - DOMAIN-SUFFIX,gtimg.com,DIRECT
-  - DOMAIN,cdn.hockeyapp.net,DIRECT
-  - DOMAIN-SUFFIX,hongxiu.com,DIRECT
-  - DOMAIN-SUFFIX,hxcdn.net,DIRECT
-  - DOMAIN-SUFFIX,iciba.com,DIRECT
-  - DOMAIN-SUFFIX,ifeng.com,DIRECT
-  - DOMAIN-SUFFIX,ifengimg.com,DIRECT
-  - DOMAIN-SUFFIX,ipip.net,DIRECT
   - DOMAIN-SUFFIX,iqiyi.com,DIRECT
-  - DOMAIN-SUFFIX,jd.com,DIRECT
-  - DOMAIN-SUFFIX,jianshu.com,DIRECT
-  - DOMAIN-SUFFIX,knewone.com,DIRECT
-  - DOMAIN-SUFFIX,le.com,DIRECT
-  - DOMAIN-SUFFIX,lecloud.com,DIRECT
-  - DOMAIN-SUFFIX,lemicp.com,DIRECT
-  - DOMAIN-SUFFIX,licdn.com,DIRECT
-  - DOMAIN-SUFFIX,luoo.net,DIRECT
-  - DOMAIN-SUFFIX,meituan.com,DIRECT
-  - DOMAIN-SUFFIX,meituan.net,DIRECT
-  - DOMAIN-SUFFIX,mi.com,DIRECT
-  - DOMAIN-SUFFIX,miaopai.com,DIRECT
-  - DOMAIN-SUFFIX,microsoft.com,DIRECT
-  - DOMAIN-SUFFIX,microsoftonline.com,DIRECT
-  - DOMAIN-SUFFIX,miui.com,DIRECT
-  - DOMAIN-SUFFIX,miwifi.com,DIRECT
-  - DOMAIN-SUFFIX,mob.com,DIRECT
-  - DOMAIN-SUFFIX,netease.com,DIRECT
-  - DOMAIN-SUFFIX,office.com,DIRECT
-  - DOMAIN-SUFFIX,office365.com,DIRECT
-  - DOMAIN-KEYWORD,officecdn,DIRECT
-  - DOMAIN-SUFFIX,oschina.net,DIRECT
-  - DOMAIN-SUFFIX,ppsimg.com,DIRECT
-  - DOMAIN-SUFFIX,pstatp.com,DIRECT
-  - DOMAIN-SUFFIX,qcloud.com,DIRECT
-  - DOMAIN-SUFFIX,qdaily.com,DIRECT
-  - DOMAIN-SUFFIX,qdmm.com,DIRECT
-  - DOMAIN-SUFFIX,qhimg.com,DIRECT
-  - DOMAIN-SUFFIX,qhres.com,DIRECT
-  - DOMAIN-SUFFIX,qidian.com,DIRECT
-  - DOMAIN-SUFFIX,qihucdn.com,DIRECT
-  - DOMAIN-SUFFIX,qiniu.com,DIRECT
-  - DOMAIN-SUFFIX,qiniucdn.com,DIRECT
-  - DOMAIN-SUFFIX,qiyipic.com,DIRECT
-  - DOMAIN-SUFFIX,qq.com,DIRECT
-  - DOMAIN-SUFFIX,qqurl.com,DIRECT
-  - DOMAIN-SUFFIX,rarbg.to,DIRECT
-  - DOMAIN-SUFFIX,ruguoapp.com,DIRECT
-  - DOMAIN-SUFFIX,segmentfault.com,DIRECT
-  - DOMAIN-SUFFIX,sinaapp.com,DIRECT
-  - DOMAIN-SUFFIX,smzdm.com,DIRECT
-  - DOMAIN-SUFFIX,snapdrop.net,DIRECT
-  - DOMAIN-SUFFIX,sogou.com,DIRECT
-  - DOMAIN-SUFFIX,sogoucdn.com,DIRECT
-  - DOMAIN-SUFFIX,sohu.com,DIRECT
-  - DOMAIN-SUFFIX,soku.com,DIRECT
-  - DOMAIN-SUFFIX,speedtest.net,DIRECT
-  - DOMAIN-SUFFIX,sspai.com,DIRECT
-  - DOMAIN-SUFFIX,suning.com,DIRECT
-  - DOMAIN-SUFFIX,taobao.com,DIRECT
-  - DOMAIN-SUFFIX,tencent.com,DIRECT
-  - DOMAIN-SUFFIX,tenpay.com,DIRECT
-  - DOMAIN-SUFFIX,tianyancha.com,DIRECT
-  - DOMAIN-SUFFIX,tmall.com,DIRECT
-  - DOMAIN-SUFFIX,tudou.com,DIRECT
-  - DOMAIN-SUFFIX,umetrip.com,DIRECT
-  - DOMAIN-SUFFIX,upaiyun.com,DIRECT
-  - DOMAIN-SUFFIX,upyun.com,DIRECT
-  - DOMAIN-SUFFIX,veryzhun.com,DIRECT
-  - DOMAIN-SUFFIX,weather.com,DIRECT
-  - DOMAIN-SUFFIX,weibo.com,DIRECT
-  - DOMAIN-SUFFIX,xiami.com,DIRECT
-  - DOMAIN-SUFFIX,xiami.net,DIRECT
-  - DOMAIN-SUFFIX,xiaomicp.com,DIRECT
-  - DOMAIN-SUFFIX,ximalaya.com,DIRECT
-  - DOMAIN-SUFFIX,xmcdn.com,DIRECT
-  - DOMAIN-SUFFIX,xunlei.com,DIRECT
-  - DOMAIN-SUFFIX,yhd.com,DIRECT
-  - DOMAIN-SUFFIX,yihaodianimg.com,DIRECT
-  - DOMAIN-SUFFIX,yinxiang.com,DIRECT
-  - DOMAIN-SUFFIX,ykimg.com,DIRECT
-  - DOMAIN-SUFFIX,youdao.com,DIRECT
-  - DOMAIN-SUFFIX,youku.com,DIRECT
-  - DOMAIN-SUFFIX,zealer.com,DIRECT
+  - DOMAIN-SUFFIX,acfun.cn,DIRECT
   - DOMAIN-SUFFIX,zhihu.com,DIRECT
-  - DOMAIN-SUFFIX,zhimg.com,DIRECT
-  - DOMAIN-SUFFIX,zimuzu.tv,DIRECT
-  - DOMAIN-SUFFIX,zoho.com,DIRECT
-  - DOMAIN-SUFFIX,zoho.com,DIRECT
-  - DOMAIN-SUFFIX,my.justhost.ru,DIRECT 
-  - DOMAIN-SUFFIX,paypal.com,DIRECT 
-  - DOMAIN-SUFFIX,my.racknerd.com,DIRECT 
+  - DOMAIN-SUFFIX,bytedance.com,DIRECT
+  - DOMAIN-SUFFIX,douyin.com,DIRECT
+  - DOMAIN-SUFFIX,163.com,DIRECT
+  - DOMAIN-SUFFIX,alicdn.com,DIRECT
+  - DOMAIN-SUFFIX,alipay.com,DIRECT
+  - DOMAIN-SUFFIX,taobao.com,DIRECT
+  - DOMAIN-SUFFIX,weibo.com,DIRECT
+  - DOMAIN-SUFFIX,qq.com,DIRECT
+  - DOMAIN-SUFFIX,mi.com,DIRECT
+
+  # 常用加速应用（可按需添加）
+  - DOMAIN-SUFFIX,youtube.com,SelectManually
+  - DOMAIN-SUFFIX,ytimg.com,SelectManually
+  - DOMAIN-SUFFIX,telegram.org,SelectManually
+  - DOMAIN-SUFFIX,t.me,SelectManually
+  - DOMAIN-SUFFIX,openai.com,SelectManually
+  - DOMAIN-SUFFIX,chatgpt.com,SelectManually
+
+  # 其他国外默认走 AutoSelect
   - GEOIP,CN,DIRECT
-  - MATCH,Proxy
+  - MATCH,SelectManually
